fix size for canvas with overflow hidden

--- a/src/app/canvas/canvas.component.scss
+++ b/src/app/canvas/canvas.component.scss
@@ -8,12 +8,15 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+
+  overflow: hidden;
   
-  padding: 15px;
+  margin: 15px;
 }
 
 .canvas {
-  flex: 1;
+  min-width: 2000px;
+  min-height: 2000px;
   
   touch-action: none;
   cursor: crosshair;
